<resources>
    <!-- Titulo de la App -->
    <string name="app_name">Ejercicios Tema 1</string>
    <!-- Menu -->
    <string name="btnEjercicioUno">Ejercicio 1</string>
    <string name="btnEjercicioDos">Ejercicio 2</string>
    <string name="btnEjercicioTres">Ejercicio 3</string>
    <string name="btnEjercicioCuatro">Ejercicio 4</string>
    <string name="btnEjercicioCinco">Ejercicio 5</string>
    <!-- Conversor de Divisas-->
    <string name="txvDolaresString">Dólares</string>
    <string name="txvEurosString">Euros</string>
    <string name="radioDolEurString">Dólares a Euros</string>
    <string name="radioEurDolString">Euros a Dólares</string>
    <string name="btnConvertir">Convertir</string>
    <!-- Conversor de Cm a Pulgadas -->
    <string name="txvPulgadas">Pulgadas</string>
    <string name="txvCm">Centímetros</string>
    <string name="radioPulgadasCm">Pulgadas a Centímetros</string>
    <string name="radioCmPulgadas">Centímetros a pulgadas</string>
    <!-- Saludo App -->
    <string name="txvSaludo">Escribe tu nombre:</string>
    <string name="btnSaludo">Saludar</string>
    <string name="btnNavegar">Navegar</string>
    <!-- Contador de Cafés -->
    <string name="txvCafeTitulo">Cafés</string>
    <string name="txvCafeNum">0</string>
    <string name="txvTiempo">00:00</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnComenzar">Comenzar</string>

    <string name="tag0">0</string>
    <string name="tag1">1</string>
    <string name="tag2">2</string>
    <string name="tag3">3</string>
    <string name="tag4">4</string>
    <string name="tag5">5</string>
    <string name="tag6">6</string>
    <string name="tag7">7</string>
    <string name="tag8">8</string>
    <string name="tag9">9</string>
    <string name="tag10">10</string>
    <string name="tag11">11</string>
    <string name="tag12">12</string>
    <string name="tag13">13</string>
    <string name="tag14">14</string>
    <string name="tag15">15</string>
    <string name="tag16">16</string>
    <string name="tag17">17</string>
    <string name="tag18">18</string>
    <string name="tag19">19</string>
</resources>

